[package]
name = "wba-solana-prereqs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]
default = []
client = ["solana-sdk", "solana-client", "solana-idlgen"]

[dependencies]
bs58 = "0.4.0"
borsh = "0.10.3"

# Solana 1.15.2, combina com solana-idlgen
solana-program = "1.15.2"

# Off-chain deps (não necessários para build-sbf). Habilite com `--features client`.
solana-sdk = { version = "1.15.2", optional = true }
solana-client = { version = "1.15.2", optional = true }

# SPL (compatível com Solana 1.15)
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git", optional = true }

[patch.crates-io]
constant_time_eq = { path = "vendor/constant_time_eq" }
